# Diploma

./: CMakeLists.txt  README.md  main.cpp
Engine/: Engine.cpp  Engine.hpp  GL.hpp
Engine/BSpline/: BSpline.cpp  BSpline.hpp
Engine/Bezier/: Bezier.cpp  Bezier.hpp
Engine/Curve/: Curve.hpp
Engine/Input/: InputManager.hpp
Engine/Line/: Line.cpp  Line.hpp
Engine/Point/: Point.cpp  Point.hpp
Engine/Render/: Render.cpp  Render.hpp
Engine/Shader/: Shader.cpp  Shader.hpp
Engine/Utils/: Math.hpp  Time.hpp
Engine/Window/: Window.hpp  WindowsManager.cpp  WindowsManager.hpp
Resources/Shaders/: LineF.frag  LineV.vert  PointF.frag  PointV.vert
glm/gtx/: spline.hpp
